# AI-Based-Data-Fusion

./: .env.example  .gitignore  BEV Recommendations (Gemini).docx  QUICKSTART.md  README.md  YoloSegPub2.py  calib.txt
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
bags/: README.md
config/: fusion_params.yaml  sensor_params.yaml
docs/: Architecture_Proposal.md  PointPainting_Learning_Guide.md  Project_Summary.md  script_VisualizeLidarData.md
log/: latest_build
ros2_ws/src/fusion_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/fusion_msgs/msg/: FusedObject.msg  FusedObjectArray.msg
ros2_ws/src/perception_framework/: package.xml  setup.cfg  setup.py
ros2_ws/src/perception_framework/perception_framework/: lidar_to_image_projection.py
ros2_ws/src/point_painting/: package.xml  setup.cfg  setup.py
ros2_ws/src/point_painting/point_painting/: painting_logic.py  painting_node.py  rosbag_extractor.py
ros2_ws/src/point_painting/point_painting/segmentation/: deeplab_segmentation.py
ros2_ws/src/point_painting/test/: test_painting_node.py
studentProject1/: metadata.yaml
